# nerith-engine

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
lib/nerith-audio/: CMakeLists.txt
lib/nerith-compute/: CMakeLists.txt
lib/nerith-graphica-framework/: CMakeLists.txt
lib/nerith-inputs/: CMakeLists.txt
lib/nerith-mathematica/: CMakeLists.txt  mathematica.c  mathematica.h
lib/nerith-win-common/: CMakeLists.txt
lib/nerith-win-desktop/: CMakeLists.txt
src/nerith-core/: CMakeLists.txt
src/nerith-graphica/: CMakeLists.txt
src/nerith-graphica-framework/: CMakeLists.txt
src/nerith-inputs/: CMakeLists.txt
src/nerith-mathematica/: CMakeLists.txt  mathematica.c  mathematica.h
src/nerith-platforma/: CMakeLists.txt  overload.h  types.h
